syntax = "proto3";
package signaling;

enum TrackKind {
  TRACK_KIND_UNSPECIFIED = 0;
  VIDEO = 1;
  AUDIO = 2;
}

// --- Client to Server: Declare Desired State ---

message DesiredSubscription {
  string mid = 1;
  string remote_track_id = 2;
}

// Client declares what it wants subscribed
message ClientState {
  repeated DesiredSubscription subscriptions = 1;  // Full list of desired subscriptions
}

// --- Server to Client: Report Actual State ---

message TrackInfo {
  string track_id = 1;
  TrackKind kind = 2;
  string participant_id = 3;
}

message ActiveSubscription {
  string mid = 1;
  TrackInfo track = 2;
}

// Server reports current reality
message ServerState {
  repeated TrackInfo available_tracks = 1;      // All tracks available to subscribe
  repeated ActiveSubscription subscriptions = 2; // Your actual active subscriptions
}
